added mail service

--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ GOOGLE_ID=716798608893-lr0csd1s7ndb3jdeq57gro6370kd52fv.apps.googleusercontent.c
 GOOGLE_SECRET=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
 FACEBOOK_ID=667150601837264
 FACEBOOK_SECRET=f683bc293910c26d2f5d6aaf9f786b9f
+
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+Mail_USER=spp26041999@gmail.com
+MAIL_PASSWORD=kgsdotekgfnospjn
