--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.5.0",
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/apollo": "^11.0.3",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
@@ -33,6 +34,8 @@
     "bcrypt": "^5.1.0",
     "graphql": "^16.6.0",
     "mongoose": "^7.0.2",
+    "nodemailer": "^6.9.1",
+    "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
@@ -49,6 +52,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
+    "@types/nodemailer": "^6.4.7",
     "@types/passport-facebook": "^2.1.11",
     "@types/passport-google-oauth2": "^0.1.5",
     "@types/passport-jwt": "^3.0.8",
